--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev:js": "set NODE_ENV=0&& webpack",
     "build:dir": "cp -R src/public/* build/public/",
     "build:sass": "node-sass --output-style compressed src/css/ -o build/public/assets/css/",
-    "build:js": "set NODE_ENV=1&& webpack --progress --color"
+    "build:js": "set NODE_ENV=1&& webpack --progress --color",
+    "publish": "git subtree push --prefix build/public/ origin gh-pages"
   },
   "dependencies": {
     "es6-promise": "^4.2.4",
